[gd_scene load_steps=5 format=3 uid="uid://bpwugc1kay4mu"]

[ext_resource type="Script" path="res://src/scenes/components/project_modal.gd" id="1_dspmu"]
[ext_resource type="Theme" uid="uid://cppm6yivqn3pq" path="res://src/scenes/themes/toggle_buttons.tres" id="2_ailq5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v7qnj"]
content_margin_left = 120.0
content_margin_top = 40.0
content_margin_right = 120.0
content_margin_bottom = 40.0
bg_color = Color(0, 0, 0, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qa4yn"]
content_margin_left = 40.0
content_margin_top = 20.0
content_margin_right = 40.0
content_margin_bottom = 20.0
bg_color = Color(0.211765, 0.239216, 0.290196, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="ProjectModal" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v7qnj")
horizontal_scroll_mode = 0
script = ExtResource("1_dspmu")

[node name="Modal" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qa4yn")

[node name="VBoxContainer" type="VBoxContainer" parent="Modal"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Modal/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Title"

[node name="PluginsButton" type="Button" parent="Modal/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Addons Dir"

[node name="DescriptionLabel" type="Label" parent="Modal/VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
text = "Description"
autowrap_mode = 2

[node name="Plugins" type="GridContainer" parent="Modal/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ailq5")
columns = 4

[node name="LinkButton" type="Button" parent="Modal/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Link Plugins"
